Apiden gelen verilerin görünmemesi sorunu düzeltildi.

--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -32,10 +32,11 @@
         android:id="@+id/rvShoppingCart"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/searchView"
+        app:spanCount="2"
         tools:listitem="@layout/item_product_layout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
