--- a/app/src/main/res/layout/item_onboarding_two.xml
+++ b/app/src/main/res/layout/item_onboarding_two.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Welcome to Shopping App"
+            android:text="@string/welcome_to_shopping_app"
             android:textColor="@color/textColor"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="10dp"
-            android:text="Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet."
+            android:text="@string/on_boarding_two_text"
             android:textAlignment="center"
             android:textColor="@color/textColor"
             android:textSize="14sp"
