--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,16 +3,16 @@
     <item
         android:id="@+id/homeFragment"
         android:icon="@drawable/ic_baseline_home_24"
-        android:title="Home" />
+        android:title="@string/home" />
 
     <item
         android:id="@+id/shoppingCartFragment"
         android:icon="@drawable/ic_baseline_shopping_cart_24"
-        android:title="Shopping Cart" />
+        android:title="@string/shopping_cart" />
 
     <item
         android:id="@+id/profileFragment"
         android:icon="@drawable/ic_baseline_profile_24"
-        android:title="Profile" />
+        android:title="@string/profile" />
 
 </menu>
