--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -43,7 +43,7 @@
                 android:fontFamily="@font/open_sans"
                 android:textStyle="bold"
                 android:textSize="16sp"
-                android:text="Men Jacket" />
+                android:text="@string/men_jacket" />
 
             <TextView
                 android:id="@+id/tvProductPrice"
@@ -58,7 +58,7 @@
                 android:textColor="@color/app_color_1"
                 android:textStyle="bold"
                 android:textSize="16sp"
-                android:text="100$" />
+                android:text="@string/_100_dolar" />
 
 
 
@@ -74,7 +74,7 @@
                 android:fontFamily="@font/open_sans"
                 android:textColor="@color/app_color_1"
                 android:textSize="16sp"
-                android:text="This jacket is very good, very very very good. This jacket is very good, very very very good. This jacket is very good, very very very good." />
+                android:text="@string/this_jacket_is_very_good" />
 
             <LinearLayout
                 android:id="@+id/llAddToBasket"
@@ -91,14 +91,14 @@
                     android:layout_width="wrap_content"
                     android:fontFamily="@font/open_sans"
                     android:layout_height="wrap_content"
-                    android:text="Add To Basket"
+                    android:text="@string/add_to_basket"
                     />
                 <Button
                     android:id="@+id/bttnDecreaseQuantity"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans"
-                    android:text="-"
+                    android:text="@string/minus"
                     android:layout_marginStart="12dp"
                     />
                 <TextView
@@ -109,13 +109,13 @@
                     android:textStyle="bold"
                     android:gravity="center"
                     android:textColor="@color/app_color_1"
-                    android:text="1"/>
+                    android:text="@string/_1"/>
                 <Button
                     android:id="@+id/bttnIncreaseQuantity"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans"
-                    android:text="+"
+                    android:text="@string/plus"
                     />
                 <LinearLayout
                     android:id="@+id/llTotalPrice"
@@ -128,7 +128,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/open_sans"
                         android:textColor="@color/app_color_1"
-                        android:text="Total Price"/>
+                        android:text="@string/total_price"/>
                     <TextView
                         android:id="@+id/tvProductDetailTotalPrice"
                         android:layout_width="wrap_content"
@@ -138,7 +138,7 @@
                         android:textColor="@color/app_color_1"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        android:text="0 $"/>
+                        android:text="@string/_0_dolar"/>
                 </LinearLayout>
 
             </LinearLayout>
