--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".feature.profile.ProfileFragment">
 
     <LinearLayout
         android:id="@+id/llProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="24dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
             android:id="@+id/ivProfileImage"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_profile"/>
+            android:src="@drawable/ic_profile" />
+
         <LinearLayout
             android:id="@+id/llProfileInfos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:paddingLeft="12dp"
             android:layout_marginTop="20dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingStart="12dp"
+            tools:ignore="RtlSymmetry">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -41,21 +44,22 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans"
+                    android:text="@string/username"
                     android:textColor="@color/app_color_1"
-                    android:textStyle="bold"
                     android:textSize="18sp"
-                    android:text="Username : "/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tvProfileUsername"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans"
+                    android:text="@string/space"
                     android:textColor="@color/app_color_1"
-                    android:textStyle="bold"
                     android:textSize="18sp"
-                    android:text=" "/>
+                    android:textStyle="bold" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -66,34 +70,46 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans"
+                    android:text="@string/email"
                     android:textColor="@color/app_color_1"
-                    android:textStyle="bold"
                     android:textSize="18sp"
-                    android:text="Email : "/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tvProfileEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans"
+                    android:text="@string/space"
                     android:textColor="@color/app_color_1"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:text=" "/>
+                    android:textStyle="bold" />
             </LinearLayout>
 
         </LinearLayout>
 
     </LinearLayout>
+
     <Button
         android:id="@+id/bttnSignOut"
-        app:layout_constraintTop_toBottomOf="@+id/llProfile"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp"
-        android:text="SIGN OUT"
-        android:textSize="20sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/sign_out"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLanguage" />
+
+    <Button
+        android:id="@+id/btnLanguage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/language"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/llProfile" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
